[package]
name = "seebis_oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.11"
async-channel = "1.6.1"
actix-web = "4"
anyhow = "1.0.61"
chrono = "0.4.22"